src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_assignments.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Ident(
            "i",
        ),
        span: Span {
            start: 0,
            end: 1,
            literal: "i",
        },
    },
    Token {
        kind: Assign,
        span: Span {
            start: 2,
            end: 3,
            literal: "=",
        },
    },
    Token {
        kind: Ident(
            "i",
        ),
        span: Span {
            start: 4,
            end: 5,
            literal: "i",
        },
    },
    Token {
        kind: Plus,
        span: Span {
            start: 6,
            end: 7,
            literal: "+",
        },
    },
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 8,
            end: 9,
            literal: "1",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 9,
            end: 9,
            literal: "",
        },
    },
]
