src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_bitwise_ops.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Ident(
            "a",
        ),
        span: Span {
            start: 0,
            end: 1,
            literal: "a",
        },
    },
    Token {
        kind: Amp,
        span: Span {
            start: 1,
            end: 2,
            literal: "&",
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        span: Span {
            start: 2,
            end: 3,
            literal: "b",
        },
    },
    Token {
        kind: Pipe,
        span: Span {
            start: 3,
            end: 4,
            literal: "|",
        },
    },
    Token {
        kind: Ident(
            "c",
        ),
        span: Span {
            start: 4,
            end: 5,
            literal: "c",
        },
    },
    Token {
        kind: Caret,
        span: Span {
            start: 5,
            end: 6,
            literal: "^",
        },
    },
    Token {
        kind: Tilde,
        span: Span {
            start: 6,
            end: 7,
            literal: "~",
        },
    },
    Token {
        kind: Ident(
            "d",
        ),
        span: Span {
            start: 7,
            end: 8,
            literal: "d",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 8,
            end: 8,
            literal: "",
        },
    },
]
