src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_comparisons.snap
---
source: src/pagoda/tokenizer.rs
assertion_line: 208
expression: tokens
---
[
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 0,
            end: 1,
            literal: "1",
        },
    },
    Token {
        kind: EqEq,
        span: Span {
            start: 1,
            end: 3,
            literal: "==",
        },
    },
    Token {
        kind: Int(
            2,
        ),
        span: Span {
            start: 3,
            end: 4,
            literal: "2",
        },
    },
    Token {
        kind: NotEq,
        span: Span {
            start: 4,
            end: 6,
            literal: "!=",
        },
    },
    Token {
        kind: Int(
            3,
        ),
        span: Span {
            start: 6,
            end: 7,
            literal: "3",
        },
    },
    Token {
        kind: LessEq,
        span: Span {
            start: 7,
            end: 9,
            literal: "<=",
        },
    },
    Token {
        kind: Int(
            4,
        ),
        span: Span {
            start: 9,
            end: 10,
            literal: "4",
        },
    },
    Token {
        kind: GreaterEq,
        span: Span {
            start: 10,
            end: 12,
            literal: ">=",
        },
    },
    Token {
        kind: Int(
            5,
        ),
        span: Span {
            start: 12,
            end: 13,
            literal: "5",
        },
    },
    Token {
        kind: Less,
        span: Span {
            start: 13,
            end: 14,
            literal: "<",
        },
    },
    Token {
        kind: Int(
            6,
        ),
        span: Span {
            start: 14,
            end: 15,
            literal: "6",
        },
    },
    Token {
        kind: Greater,
        span: Span {
            start: 15,
            end: 16,
            literal: ">",
        },
    },
    Token {
        kind: Int(
            7,
        ),
        span: Span {
            start: 16,
            end: 17,
            literal: "7",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 17,
            end: 17,
            literal: "",
        },
    },
]
