src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_compound_assignments.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Ident(
            "a",
        ),
        span: Span {
            start: 0,
            end: 1,
            literal: "a",
        },
    },
    Token {
        kind: PlusAssign,
        span: Span {
            start: 1,
            end: 3,
            literal: "+=",
        },
    },
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 3,
            end: 4,
            literal: "1",
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        span: Span {
            start: 5,
            end: 6,
            literal: "b",
        },
    },
    Token {
        kind: MinusAssign,
        span: Span {
            start: 6,
            end: 8,
            literal: "-=",
        },
    },
    Token {
        kind: Int(
            2,
        ),
        span: Span {
            start: 8,
            end: 9,
            literal: "2",
        },
    },
    Token {
        kind: Ident(
            "c",
        ),
        span: Span {
            start: 10,
            end: 11,
            literal: "c",
        },
    },
    Token {
        kind: StarAssign,
        span: Span {
            start: 11,
            end: 13,
            literal: "*=",
        },
    },
    Token {
        kind: Int(
            3,
        ),
        span: Span {
            start: 13,
            end: 14,
            literal: "3",
        },
    },
    Token {
        kind: Ident(
            "d",
        ),
        span: Span {
            start: 15,
            end: 16,
            literal: "d",
        },
    },
    Token {
        kind: SlashAssign,
        span: Span {
            start: 16,
            end: 18,
            literal: "/=",
        },
    },
    Token {
        kind: Int(
            4,
        ),
        span: Span {
            start: 18,
            end: 19,
            literal: "4",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 19,
            end: 19,
            literal: "",
        },
    },
]
