src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_else_keyword.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Else,
        span: Span {
            start: 0,
            end: 4,
            literal: "else",
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 5,
            end: 6,
            literal: "{",
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 7,
            end: 8,
            literal: "}",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 8,
            end: 8,
            literal: "",
        },
    },
]
