src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_fn_keyword.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Fn,
        span: Span {
            start: 0,
            end: 2,
            literal: "fn",
        },
    },
    Token {
        kind: Ident(
            "foo",
        ),
        span: Span {
            start: 3,
            end: 6,
            literal: "foo",
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 6,
            end: 7,
            literal: "(",
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 7,
            end: 8,
            literal: ")",
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 9,
            end: 10,
            literal: "{",
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 10,
            end: 11,
            literal: "}",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 11,
            end: 11,
            literal: "",
        },
    },
]
