src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_for_keyword.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: For,
        span: Span {
            start: 0,
            end: 3,
            literal: "for",
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 4,
            end: 5,
            literal: "(",
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 6,
            end: 7,
            literal: ";",
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 8,
            end: 9,
            literal: ")",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 9,
            end: 9,
            literal: "",
        },
    },
]
