src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_identifiers_and_keywords.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Let,
        span: Span {
            start: 0,
            end: 3,
            literal: "let",
        },
    },
    Token {
        kind: Ident(
            "foo",
        ),
        span: Span {
            start: 4,
            end: 7,
            literal: "foo",
        },
    },
    Token {
        kind: Assign,
        span: Span {
            start: 8,
            end: 9,
            literal: "=",
        },
    },
    Token {
        kind: Ident(
            "bar",
        ),
        span: Span {
            start: 10,
            end: 13,
            literal: "bar",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 13,
            end: 13,
            literal: "",
        },
    },
]
