src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_if_keyword.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: If,
        span: Span {
            start: 0,
            end: 2,
            literal: "if",
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 3,
            end: 4,
            literal: "(",
        },
    },
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 4,
            end: 5,
            literal: "1",
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 5,
            end: 6,
            literal: ")",
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 7,
            end: 8,
            literal: "{",
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 8,
            end: 9,
            literal: "}",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 9,
            end: 9,
            literal: "",
        },
    },
]
