src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_operators.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 0,
            end: 1,
            literal: "1",
        },
    },
    Token {
        kind: Plus,
        span: Span {
            start: 1,
            end: 2,
            literal: "+",
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 2,
            end: 3,
            literal: "-",
        },
    },
    Token {
        kind: Star,
        span: Span {
            start: 3,
            end: 4,
            literal: "*",
        },
    },
    Token {
        kind: Slash,
        span: Span {
            start: 4,
            end: 5,
            literal: "/",
        },
    },
    Token {
        kind: Int(
            2,
        ),
        span: Span {
            start: 5,
            end: 6,
            literal: "2",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 6,
            end: 6,
            literal: "",
        },
    },
]
